Complete el README y modifique algunos estilos

--- a/tukishop/src/components/Navbar/BotonDarkMode/botonDarkMode.css
+++ b/tukishop/src/components/Navbar/BotonDarkMode/botonDarkMode.css
@@ -16,7 +16,7 @@
   }
   
   .slider {
-    background-color: #ccc;
+    background-color: rgb(135, 133, 133);
     bottom: 0;
     cursor: pointer;
     left: 0;
